# RustyTunes

./: .env.example  .gitignore  Cargo.toml  README.md
src/: bot.rs
src/commands/music/: cmd_normalize.rs  cmd_silent.rs  mod.rs
src/embeds/: player_embed.rs
src/embeds/activity/: gather_embed.rs
src/embeds/music/: player_embed.rs
src/handlers/: message_handler.rs  queue_handler.rs
src/player/: player.rs
src/service/: cache_service.rs  emoticon_service.rs  gather_service.rs  mod.rs  normalize_service.rs
