[package]
name = "RustTunes"
description = "A discord bot that plays music from youtube"
version = "1.13.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
hyper = { version = "1.5.0", features = ["client", "http1"] }
hyper-rustls = "0.27.3"
google-youtube3 = "5.0.5"# Must stay this version, cuz I don't know how to work with the new one
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
songbird = "0.6"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serenity = "0.12.2"
poise = "0.6.1"
dotenv = "0.15"
thiserror = "1.0.64"
html-escape = "0.2.13"
lombok = "0.4.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "time", "chrono"] }
symphonia = { version = "0.5.4", features = ["all"] }
regex = "1.11.1"
rand = { version = "0.9.0-alpha.2", features = ["std_rng"] }
time = "0.3.36"
uwu-rs = "1.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
emojis = "0.6"
unicode-segmentation = "1.11"